import org.gradle.util.GradleVersion
assert GradleVersion.current() >= GradleVersion.version('4.2') //lowest gradle version supported

allprojects {
    defaultTasks 'build'
    group = 'no.statkart.sktools'

    // version kan settes via properties (feks kommandolinje -Psktools_versjon=xxx )
    project.version = sktools_versjon

    // valgfri build katalog - kan benyttes for kompilering for flere samtidige Gradle versjoner..
    buildDir = gradle.startParameter.systemPropertiesArgs.get('buildDirName') ?: Project.DEFAULT_BUILD_DIR_NAME

}

// Optional configuration of library versions to use. (not production)
// Values will be read from project.properties with naming convention "version.<key>"
// Simply add version properties to your gradle-user.property file to use this feature.
def libVersion(String name, String defaultValue) {
    project.ext.properties.get('version.' + name, defaultValue) //development mode only
}


// build a map of the dependency artifacts to use. Allows centralized definition of the versions of artifacts to
// use. In that respect it serves a role similar to <dependencyManagement> in Maven
project.ext.libraries = [

        // Logging
        slf4j_api: "org.slf4j:slf4j-api:${libVersion('slf4j', '1.7.29')}",
        slf4j_simple: "org.slf4j:slf4j-simple:${libVersion('slf4j', '1.7.29')}",

        saxon : 'net.sf.saxon:Saxon-HE:9.8.0-15', //xslt 2.0

        guava: 'com.google.guava:guava:19.0',

        jaxb_xjc : 'org.glassfish.jaxb:jaxb-xjc:2.2.11',
        jaxb_rt : 'org.glassfish.jaxb:jaxb-runtime:2.2.11',

        jaxb_api : 'javax.xml.bind:jaxb-api:2.3.0@jar',
        jaxws_annotations : 'javax.jws:jsr181-api:1.0-MR1@jar',

        // Testing
        assertj: 'org.assertj:assertj-core:2.9.1', /* AssertJ 2.x for Java 7, 3.x for Java8 */
        testng: 'org.testng:testng:6.14.3',
        hsqldb: 'org.hsqldb:hsqldb:2.3.3', //2.4.x krever Java8
]


// Oracle Weblogic dependencies

assert WEBLOGIC_VERSION //husk å utvide byggesystem med ny weblogic version..
assert WEBLOGIC_HOME //WEBLOGIC_HOME maa vaere gitt




subprojects { Project project ->
    apply plugin: 'project-report'
    apply plugin: 'base'


    repositories {
        mavenLocal()
        maven { name = 'public'; url = "${rootProject.MAVEN_REPO}" }
    }


    def filterTestGroup = { Test test = test, String group, String value ->
        test.with {
            if (testFramework.class.simpleName == 'TestNGTestFramework') {
                if (value == 'INCLUDE') {
                    testFramework.options.includeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: including group '${group}'" }
                } else if (value == 'EXCLUDE') {
                    testFramework.options.excludeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                } else if (value == 'EXCLUDE_WHEN_NO_INCLUDES') {
                    project.afterEvaluate {
                        if (testFramework.options.includeGroups.isEmpty()) {
                            testFramework.options.excludeGroups group
                            test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                        } else {
//                            logMessageWhenTask test "${test.name} configuration: ignoring group '${group}'"
                        }
                    }
                } else {
                    assert value == 'IGNORED' //feil ved ikke gyldig verdi for filtrering av tester
                }
            } else {
                test.doFirst { logger.warn "${test.name} configuration: unable to configure groups('${group}') for ${testFramework.class.simpleName}" }
            }
        }
    }


    project.plugins.withType(JavaPlugin) {

        sourceCompatibility = '1.7'
        targetCompatibility = '1.7'

        // appropriately inject common dependencies into each sub-project
        dependencies {
            testCompile libraries.assertj
            testCompile libraries.testng
        }


        project.ext.set('filterProperties', [:])

        project.afterEvaluate {
            if (project.ext.filterProperties.isEmpty())
            project.properties.entrySet().collectEntries(project.ext.filterProperties) {(it.value instanceof String) ? new MapEntry(it.key, it.value) : [:]}
        }


        ['main', 'test'].each { String scope ->
            def unfilteredPropertiesDir = project.file("src/${scope}/resources-filter")
            def filteredResourcesDir = project.file("gen/${scope}/resources")

            def scopeName = scope.replaceFirst(".") {it[0].toUpperCase()}

            if (unfilteredPropertiesDir.isDirectory()) {
                def filterTask = task("filter${scopeName}Resources") {
                    inputs.dir(unfilteredPropertiesDir)

                    inputs.properties(project.filterProperties)
                    outputs.dir(filteredResourcesDir)
                    doLast {
                        delete(filteredResourcesDir);
                        copy {
                            into(filteredResourcesDir)
                            from(unfilteredPropertiesDir)
                            filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: project.filterProperties)
                        }
                        ant.touch() { fileset(dir: filteredResourcesDir)}
                    }
                }
                project.sourceSets."$scope".resources.srcDir filteredResourcesDir
                project.processResources.dependsOn filterTask

            }
        }


        // Test resultater og rapporter havner i egne mapper for paralleliserbarhet i Jenkins.
        // - feks build/reports/tests/<task name>
        // - feks build/test-results/<task name>
        tasks.create("testGradle${GradleVersion.current().baseVersion.version}", Test)
    }

    /**
     * Testing via TestNG grupper. Se bruk av @Test(groups = "") i koden.
     *
     * -DignoreFailures=true stopper ikke eksekvering etter feilende modul og kjører videre. Kjekt for integrasjonstesting som ønsker å kjøre alle tester alltid.
     */
    project.tasks.withType(Test) { Test test -> //felles for alle test-tasks

        useTestNG() {  //benytter kun TestNG over alt
            listeners << 'org.testng.reporters.XMLReporter' // For Jenkins, siden Gradle 1.4+ ikke tar med default listeners som standard lenger
//            listeners << 'org.uncommons.reportng.HTMLReporter' // Gradles innebygde rapport viser ikke skipped
        }

        ignoreFailures = System.getProperty('ignoreFailures', 'false') == 'true' //Gradle feiler ikke dersom denne er true. Kan ikke være true dersom en gjør en publish
        systemProperty 'java.io.tmpdir', System.getProperty('java.io.tmpdir')

        jvmArgs '-Xmx512m', '-XX:PermSize=128m', '-XX:MaxPermSize=256m'
//            testLogging.showStandardStreams = true

        filterTestGroup(test, 'broken', 'EXCLUDE')
        inputs.property 'excludedGroups', testFramework.options.includeGroups //trigger re-kjøring av test ved endring av grupper
        inputs.property 'includedGroups', testFramework.options.excludeGroups //trigger re-kjøring av test ved endring av grupper

        if (rootProject.hasProperty('test.remote.debug')) {
            jvmArgs '-Xdebug'
            jvmArgs '-Xnoagent'
            jvmArgs '-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y'
        }

        //listening to test execution events
        afterTest { descriptor, result ->
            logger.lifecycle((result.toString() == 'SUCCESS' ? ' Successfully tested' : 'Failed testing') + " : ${descriptor.className}.${descriptor.name}")
            if (result.resultType.name() == 'FAILURE') {
                logger.error("${result.exception}")
            }
        }
    }


    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8' //SKTOOLS-163: java source in UTF-8 encoding
    }

    tasks.withType(GroovyCompile) {
        options.encoding = 'UTF-8' //SKTOOLS-163: java source in UTF-8 encoding (discriminates java files in the groovy source set)
        groovyOptions.encoding = 'UTF-8' //SKTOOLS-163: groovy source files in UTF-8 encoding (default is UTF-8)
    }

    tasks.withType(Jar) {
        it.manifest.attributes([
            'Specification-Title'   : project.name,
            'Specification-Vendor'  : 'Statens kartverk',
            'Specification-Version' : (gradle.startParameter.projectProperties.get('sktools_versjon') ?: sktools_versjon).replace('-SNAPSHOT', ''),

            //misc build info
            'Build-By'              : System.getProperty('user.name'),
            'Build-Machine'         : java.net.InetAddress.localHost.hostName,
            'Build-Repo'            : MAVEN_REPO,
            'Build-Gradle'          : gradle.gradleVersion,

            'Implementation-Title'  : "${project.name} bygget for ${(version == null || version.contains('-SNAPSHOT')) ? 'TEST' : 'Produksjon'}",
            'Implementation-Vendor' : 'Statens kartverk',
            'Implementation-Version': project.version,
        ])
    }
}

